@@ -3,6 +3,7 @@ Issue #1088 Concurrency issues in NavContainerHelper
 Added default path to filename in New-BcContainerWizard
 Added default parameters for NewContainer (example $navContainerHelperConfig.defaultNewContainerParameters = @{ "updatehosts" = $true })
 Issue #1100 docker inspect displays shows error if image doesn't exist
+Issue #1094 make navcontainerHelper run even if somebody removes the configuration variable
 
 0.7.0.13
 Get-BestNavContainerImageName didn't work in 0.7.0.12
